--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -57,6 +57,12 @@ jobs:
           cd "${{ steps.findroot.outputs.root }}"
           patch -p1 < "${{ github.workspace }}/engitrack-fix-csv-dayoff-nosettings.patch"
 
+      # ✅ NEW STEP — Engineer Name + filename update
+      - name: Add Engineer Name field and include in CSV filename
+        run: |
+          cd "${{ steps.findroot.outputs.root }}"
+          patch -p1 < "${{ github.workspace }}/engitrack-add-engineer-name-filename.patch"
+
       - name: Remove dedicated email bar (UI only, safe)
         run: |
           cd "${{ steps.findroot.outputs.root }}"
@@ -68,7 +74,6 @@ jobs:
           ROOT="${{ steps.findroot.outputs.root }}"
           cd "$ROOT"
 
-          # Find the file containing the Unpaid Break UI
           TARGET="$(find client/src -type f \( -name '*.tsx' -o -name '*.ts' \) -print0 | xargs -0 grep -l -E 'Unpaid Break|unpaidBreak' | head -n 1 || true)"
           if [ -z "$TARGET" ]; then
             echo "WARNING: Could not find Unpaid Break in client/src; skipping"
@@ -77,96 +82,69 @@ jobs:
           echo "Editing unpaid break in: $TARGET"
 
           python3 - "$TARGET" <<'PY'
-          import sys, re
-          from pathlib import Path
+import sys, re
+from pathlib import Path
 
-          target = Path(sys.argv[1])
-          s = target.read_text(encoding="utf-8")
+target = Path(sys.argv[1])
+s = target.read_text(encoding="utf-8")
 
-          if "__HIDE_UNPAID_BREAK__" in s:
-            print("Already hidden; skipping")
-            sys.exit(0)
+if "__HIDE_UNPAID_BREAK__" in s:
+    sys.exit(0)
 
-          # Find the first occurrence of the label text
-          m = re.search(r"<label[^>]*>[^<]*Unpaid\s*Break[^<]*</label>", s, flags=re.I)
-          if not m:
-            print("WARNING: Unpaid Break label not found in target; skipping")
-            sys.exit(0)
+m = re.search(r"<label[^>]*>[^<]*Unpaid\s*Break[^<]*</label>", s, flags=re.I)
+if not m:
+    sys.exit(0)
 
-          # Find nearest container <div ...> before label
-          start = s.rfind("<div", 0, m.start())
-          if start == -1:
-            print("WARNING: Could not find container <div>; skipping")
-            sys.exit(0)
+start = s.rfind("<div", 0, m.start())
+if start == -1:
+    sys.exit(0)
 
-          # Find matching </div> for that container (stack scan)
-          i = start
-          depth = 0
-          end = -1
-          while i < len(s):
-            if s.startswith("<div", i):
-              depth += 1
-              i += 4
-              continue
-            if s.startswith("</div>", i):
-              depth -= 1
-              i += 6
-              if depth == 0:
-                end = i
-                break
-              continue
-            i += 1
+i = start
+depth = 0
+end = -1
+while i < len(s):
+    if s.startswith("<div", i):
+        depth += 1
+        i += 4
+        continue
+    if s.startswith("</div>", i):
+        depth -= 1
+        i += 6
+        if depth == 0:
+            end = i
+            break
+        continue
+    i += 1
 
-          if end == -1:
-            print("WARNING: Could not find matching </div>; skipping")
-            sys.exit(0)
+if end == -1:
+    sys.exit(0)
 
-          block = s[start:end]
-          replacement = "{/* __HIDE_UNPAID_BREAK__ */}\n{false && (\n" + block + "\n)}"
-          s2 = s[:start] + replacement + s[end:]
-
-          target.write_text(s2, encoding="utf-8")
-          print("OK: Unpaid Break UI hidden in", target)
-          PY
+block = s[start:end]
+replacement = "{/* __HIDE_UNPAID_BREAK__ */}\n{false && (\n" + block + "\n)}"
+s2 = s[:start] + replacement + s[end:]
+target.write_text(s2, encoding="utf-8")
+PY
 
       - name: Copy watermark image into app public folder
         run: |
-          set -e
-          test -f "${{ github.workspace }}/sos-watermark.png"
           mkdir -p "${{ steps.findroot.outputs.root }}/client/public"
           cp "${{ github.workspace }}/sos-watermark.png" "${{ steps.findroot.outputs.root }}/client/public/sos-watermark.png"
 
       - name: Add watermark CSS (safe)
         run: |
-          set -e
           CSS_FILE="${{ steps.findroot.outputs.root }}/client/src/index.css"
-          test -f "$CSS_FILE"
-          if grep -q "sos-watermark.png" "$CSS_FILE"; then
-            echo "Watermark CSS already present; skipping"
-            exit 0
+          if ! grep -q "sos-watermark.png" "$CSS_FILE"; then
+            printf '\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: 50%% 80px;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
           fi
-          printf '\n/* SOS watermark background */\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: 50%% 80px;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
 
       - name: VERIFY CSV code is present
         run: |
-          set -e
           cd "${{ steps.findroot.outputs.root }}"
           grep -n "Filesystem\.writeFile" client/src/pages/Home.tsx
-          grep -n "@capacitor/filesystem" client/src/pages/Home.tsx
-          grep -n "@capacitor/share" client/src/pages/Home.tsx
 
-      - name: Build web app (capture log)
+      - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          set -o pipefail
-          npm run build 2>&1 | tee build.log
-
-      - name: Upload build log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-log
-          path: ${{ steps.findroot.outputs.root }}/build.log
+        run: npm run build
 
       - name: Build Android APK
         working-directory: ${{ steps.findroot.outputs.root }}
