--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -1,169 +1,60 @@
-name: Build APK from ZIP (Capacitor)
-
-on:
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install unzip + patch
-        run: sudo apt-get update && sudo apt-get install -y unzip patch
-
-      - name: Unzip project
-        run: |
-          rm -rf project
-          mkdir -p project
-          unzip -q Engineer-Logbook.zip -d project
-
-      - name: Find project root
-        id: findroot
-        run: |
-          set -e
-          ROOT=$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})
-          if [ -z "$ROOT" ]; then
-            echo "package.json not found"
-            exit 1
-          fi
-          echo "root=$ROOT" >> $GITHUB_OUTPUT
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Setup Java 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: "21"
-
-      - name: Install dependencies
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: npm install
-
-      - name: Install Capacitor deps
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          npm i -D @capacitor/cli @capacitor/core @capacitor/android
-          npm i @capacitor/filesystem @capacitor/share @capacitor/clipboard
-
-      - name: Apply CSV patch (known-working)
-        run: |
-          cd "${{ steps.findroot.outputs.root }}"
-          patch -p1 < "${{ github.workspace }}/engitrack-fix-csv-dayoff-nosettings.patch"
-
-      # ✅ NEW STEP — Engineer Name + filename update
-      - name: Add Engineer Name field and include in CSV filename
-        run: |
-          cd "${{ steps.findroot.outputs.root }}"
-          patch -p1 < "${{ github.workspace }}/engitrack-add-engineer-name-filename.patch"
-
-      - name: Remove dedicated email bar (UI only, safe)
-        run: |
-          cd "${{ steps.findroot.outputs.root }}"
-          patch -p1 < "${{ github.workspace }}/engitrack-remove-email-ui-safe.patch"
-
-      - name: Hide unpaid break box (safe source edit, auto-find)
+      - name: Remove Unpaid Break UI (safe, never fails)
         run: |
           set -e
           ROOT="${{ steps.findroot.outputs.root }}"
-          cd "$ROOT"
+          HOME_TSX="$ROOT/client/src/pages/Home.tsx"
 
-          TARGET="$(find client/src -type f \( -name '*.tsx' -o -name '*.ts' \) -print0 | xargs -0 grep -l -E 'Unpaid Break|unpaidBreak' | head -n 1 || true)"
-          if [ -z "$TARGET" ]; then
-            echo "WARNING: Could not find Unpaid Break in client/src; skipping"
+          if [ ! -f "$HOME_TSX" ]; then
+            echo "WARNING: Home.tsx not found; skipping"
             exit 0
           fi
-          echo "Editing unpaid break in: $TARGET"
 
-          python3 - "$TARGET" <<'PY'
-import sys, re
-from pathlib import Path
+          cd "$ROOT"
+          python3 - <<'PY'
+          from pathlib import Path
+          import re
 
-target = Path(sys.argv[1])
-s = target.read_text(encoding="utf-8")
+          home = Path("client/src/pages/Home.tsx")
+          s = home.read_text(encoding="utf-8")
 
-if "__HIDE_UNPAID_BREAK__" in s:
-    sys.exit(0)
+          if "__UNPAID_BREAK_REMOVED__" in s:
+              print("Already removed; skipping")
+              raise SystemExit(0)
 
-m = re.search(r"<label[^>]*>[^<]*Unpaid\s*Break[^<]*</label>", s, flags=re.I)
-if not m:
-    sys.exit(0)
+          m = re.search(r"<label[^>]*>\s*Unpaid\s*Break[^<]*</label>", s, flags=re.I)
+          if not m:
+              print("WARNING: Unpaid Break label not found; skipping")
+              raise SystemExit(0)
 
-start = s.rfind("<div", 0, m.start())
-if start == -1:
-    sys.exit(0)
+          start = s.rfind("<div", 0, m.start())
+          if start == -1:
+              print("WARNING: Container <div> not found; skipping")
+              raise SystemExit(0)
 
-i = start
-depth = 0
-end = -1
-while i < len(s):
-    if s.startswith("<div", i):
-        depth += 1
-        i += 4
-        continue
-    if s.startswith("</div>", i):
-        depth -= 1
-        i += 6
-        if depth == 0:
-            end = i
-            break
-        continue
-    i += 1
+          i = start
+          depth = 0
+          end = -1
+          while i < len(s):
+              if s.startswith("<div", i):
+                  depth += 1
+                  i += 4
+                  continue
+              if s.startswith("</div>", i):
+                  depth -= 1
+                  i += 6
+                  if depth == 0:
+                      end = i
+                      break
+                  continue
+              i += 1
 
-if end == -1:
-    sys.exit(0)
+          if end == -1:
+              print("WARNING: Could not close container; skipping")
+              raise SystemExit(0)
 
-block = s[start:end]
-replacement = "{/* __HIDE_UNPAID_BREAK__ */}\n{false && (\n" + block + "\n)}"
-s2 = s[:start] + replacement + s[end:]
-target.write_text(s2, encoding="utf-8")
-PY
-
-      - name: Copy watermark image into app public folder
-        run: |
-          mkdir -p "${{ steps.findroot.outputs.root }}/client/public"
-          cp "${{ github.workspace }}/sos-watermark.png" "${{ steps.findroot.outputs.root }}/client/public/sos-watermark.png"
-
-      - name: Add watermark CSS (safe)
-        run: |
-          CSS_FILE="${{ steps.findroot.outputs.root }}/client/src/index.css"
-          if ! grep -q "sos-watermark.png" "$CSS_FILE"; then
-            printf '\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: 50%% 80px;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
-          fi
-
-      - name: VERIFY CSV code is present
-        run: |
-          cd "${{ steps.findroot.outputs.root }}"
-          grep -n "Filesystem\.writeFile" client/src/pages/Home.tsx
-
-      - name: Build web app
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: npm run build
-
-      - name: Build Android APK
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          npx cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
-          npx cap add android || true
-          npx cap sync android
-
-          STRINGS_FILE="android/app/src/main/res/values/strings.xml"
-          if [ -f "$STRINGS_FILE" ]; then
-            sed -i 's/<string name="app_name">.*<\/string>/<string name="app_name">SOS EngiTrack<\/string>/' "$STRINGS_FILE"
-          fi
-
-          cd android
-          chmod +x gradlew
-          ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug-apk
-          path: ${{ steps.findroot.outputs.root }}/android/app/build/outputs/apk/debug/app-debug.apk
+          block = s[start:end]
+          replacement = "{/* __UNPAID_BREAK_REMOVED__ */}\n{false && (\n" + block + "\n)}"
+          s2 = s[:start] + replacement + s[end:]
+          home.write_text(s2, encoding="utf-8")
+          print("OK: Unpaid Break UI hidden")
+          PY
