--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -1,3 +1,72 @@
+name: Build APK from ZIP (Capacitor)
+
+on:
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install unzip + patch
+        run: sudo apt-get update && sudo apt-get install -y unzip patch
+
+      - name: Unzip project
+        run: |
+          rm -rf project
+          mkdir -p project
+          unzip -q Engineer-Logbook.zip -d project
+
+      - name: Find project root
+        id: findroot
+        run: |
+          set -e
+          ROOT=$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})
+          if [ -z "$ROOT" ]; then
+            echo "package.json not found"
+            exit 1
+          fi
+          echo "root=$ROOT" >> $GITHUB_OUTPUT
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Setup Java 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
+
+      - name: Install dependencies
+        working-directory: ${{ steps.findroot.outputs.root }}
+        run: npm install
+
+      - name: Install Capacitor deps
+        working-directory: ${{ steps.findroot.outputs.root }}
+        run: |
+          npm i -D @capacitor/cli @capacitor/core @capacitor/android
+          npm i @capacitor/filesystem @capacitor/share @capacitor/clipboard
+
+      - name: Apply CSV patch (known-working)
+        run: |
+          cd "${{ steps.findroot.outputs.root }}"
+          patch -p1 < "${{ github.workspace }}/engitrack-fix-csv-dayoff-nosettings.patch"
+
+      - name: Add Engineer Name + include in CSV filename
+        run: |
+          cd "${{ steps.findroot.outputs.root }}"
+          patch -p1 < "${{ github.workspace }}/engitrack-add-engineer-name-filename.patch"
+
+      - name: Remove dedicated email bar (UI only, safe)
+        run: |
+          cd "${{ steps.findroot.outputs.root }}"
+          patch -p1 < "${{ github.workspace }}/engitrack-remove-email-ui-safe.patch"
+
       - name: Remove Unpaid Break UI (safe, never fails)
         run: |
           set -e
@@ -58,3 +127,45 @@
           home.write_text(s2, encoding="utf-8")
           print("OK: Unpaid Break UI hidden")
           PY
+
+      - name: Copy watermark image into app public folder
+        run: |
+          set -e
+          test -f "${{ github.workspace }}/sos-watermark.png"
+          mkdir -p "${{ steps.findroot.outputs.root }}/client/public"
+          cp "${{ github.workspace }}/sos-watermark.png" "${{ steps.findroot.outputs.root }}/client/public/sos-watermark.png"
+
+      - name: Add watermark CSS (safe)
+        run: |
+          set -e
+          CSS_FILE="${{ steps.findroot.outputs.root }}/client/src/index.css"
+          test -f "$CSS_FILE"
+          if ! grep -q "sos-watermark.png" "$CSS_FILE"; then
+            printf '\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: 50%% 80px;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
+          fi
+
+      - name: Build web app
+        working-directory: ${{ steps.findroot.outputs.root }}
+        run: npm run build
+
+      - name: Build Android APK
+        working-directory: ${{ steps.findroot.outputs.root }}
+        run: |
+          npx cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
+          npx cap add android || true
+          npx cap sync android
+
+          STRINGS_FILE="android/app/src/main/res/values/strings.xml"
+          if [ -f "$STRINGS_FILE" ]; then
+            sed -i 's/<string name="app_name">.*<\/string>/<string name="app_name">SOS EngiTrack<\/string>/' "$STRINGS_FILE"
+          fi
+
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug-apk
+          path: ${{ steps.findroot.outputs.root }}/android/app/build/outputs/apk/debug/app-debug.apk
