--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install tools
-        run: sudo apt-get update && sudo apt-get install -y unzip patch
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
 
       - name: Unzip project
         run: |
@@ -24,7 +24,7 @@ jobs:
         id: findroot
         run: |
           set -e
-          ROOT=$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})
+          ROOT="$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})"
           if [ -z "$ROOT" ]; then
             echo "package.json not found"
             exit 1
@@ -35,13 +35,13 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20"
 
-      - name: Setup Java 21
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 21
+          java-version: "21"
 
       - name: Install dependencies
         working-directory: ${{ steps.findroot.outputs.root }}
@@ -50,153 +50,39 @@ jobs:
       - name: Install Capacitor deps
         working-directory: ${{ steps.findroot.outputs.root }}
         run: |
-          npm install -D @capacitor/cli @capacitor/core @capacitor/android
-          npm install @capacitor/filesystem @capacitor/share @capacitor/clipboard
+          npm i -D @capacitor/cli @capacitor/core @capacitor/android
+          npm i @capacitor/filesystem @capacitor/share @capacitor/clipboard
 
-      - name: Apply app patches (CSV + UI + engineer name)
+      - name: Verify CSV + Engineer Name are present (fail if missing)
         working-directory: ${{ steps.findroot.outputs.root }}
         run: |
           set -e
-
-          apply_patch () {
-            local p="$1"
-            if [ ! -f "${GITHUB_WORKSPACE}/${p}" ]; then
-              echo "ERROR: Patch not found in repo root: ${p}"
-              exit 1
-            fi
-
-            echo "Applying patch: ${p}"
-            if ! patch --batch --forward -p1 < "${GITHUB_WORKSPACE}/${p}"; then
-              echo "ERROR: Patch failed: ${p}"
-              find . -name "*.rej" -maxdepth 6 -print -exec sed -n '1,200p' {} \; || true
-              exit 1
-            fi
-          }
-
-          apply_patch "engitrack-fix-csv-dayoff-nosettings.patch"
-          apply_patch "engitrack-remove-email-ui-safe.patch"
-          apply_patch "engitrack-add-engineer-name-filename.patch"
-
-      - name: Hide unpaid break box (safe edit, never fails)
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          python3 - <<'PY'
-          from pathlib import Path
-          import re
-
-          home = Path("client/src/pages/Home.tsx")
-          if not home.exists():
-            print("Home.tsx not found; skipping unpaid break removal")
-            raise SystemExit(0)
-
-          s = home.read_text(encoding="utf-8")
-
-          if "Unpaid Break" not in s and "unpaidBreak" not in s:
-            print("No Unpaid Break UI found; skipping")
-            raise SystemExit(0)
-
-          original = s
-
-          # Pattern A: comment + div block
-          s = re.sub(
-            r"\{\s*/\*\s*Unpaid\s*Break\s*\*/\s*\}\s*<div[^>]*>.*?</div>\s*",
-            "{/* Unpaid Break hidden intentionally */}\n",
-            s,
-            count=1,
-            flags=re.S
-          )
-
-          # Pattern B: any div containing a label with 'Unpaid Break'
-          if s == original:
-            s = re.sub(
-              r"<div[^>]*>\s*<label[^>]*>[^<]*Unpaid\s*Break[^<]*</label>.*?</div>\s*",
-              "<!-- Unpaid Break hidden intentionally -->\n",
-              s,
-              count=1,
-              flags=re.S
-            )
-
-          # If still unchanged, do NOT break build
-          if s == original:
-            print("WARNING: Could not match Unpaid Break UI block; leaving file unchanged.")
-            raise SystemExit(0)
-
-          home.write_text(s, encoding="utf-8")
-          print("OK: Unpaid Break UI removed/hidden in Home.tsx")
-          PY
-
-      - name: Copy watermark image into app public folder
-        run: |
-          set -e
-          test -f "${{ github.workspace }}/sos-watermark.png"
-          mkdir -p "${{ steps.findroot.outputs.root }}/client/public"
-          cp "${{ github.workspace }}/sos-watermark.png" "${{ steps.findroot.outputs.root }}/client/public/sos-watermark.png"
-
-      - name: Add watermark CSS (safe, idempotent)
-        run: |
-          set -e
-          CSS_FILE="${{ steps.findroot.outputs.root }}/client/src/index.css"
-          test -f "$CSS_FILE"
-
-          if grep -q "SOS_WATERMARK_BG" "$CSS_FILE"; then
-            echo "Watermark CSS already present; skipping"
-            exit 0
-          fi
-
-          printf '\n/* SOS_WATERMARK_BG */\nbody::before {\n  content: "";\n  position: fixed;\n  top: 0;\n  left: 0;\n  width: 100%%;\n  height: 100%%;\n  background-image: url("/sos-watermark.png");\n  background-repeat: no-repeat;\n  background-position: 50%% 110px;\n  background-size: 300px;\n  opacity: 0.06;\n  pointer-events: none;\n  z-index: 0;\n}\n' >> "$CSS_FILE"
-
-      - name: VERIFY required changes exist (fail fast if missing)
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          set -e
-          echo "Checking native CSV export exists..."
+          echo "Checking Home.tsx..."
           grep -n "Filesystem\.writeFile" client/src/pages/Home.tsx
           grep -n "@capacitor/filesystem" client/src/pages/Home.tsx
           grep -n "@capacitor/share" client/src/pages/Home.tsx
-
-          echo "Checking Engineer Name field exists..."
-          grep -n "engineerName" client/src/pages/Home.tsx
-
-          echo "Checking email bar removed..."
-          ! grep -n "Dedicated Email" client/src/pages/Home.tsx
+          grep -n "Engineer Name" client/src/pages/Home.tsx
+          grep -n "engineerSlug" client/src/pages/Home.tsx
+          echo "OK."
 
       - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
         run: npm run build
 
-      - name: Init + Sync Android
+      - name: Build Android APK
         working-directory: ${{ steps.findroot.outputs.root }}
         run: |
-          npx cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
-          npx cap add android || true
-          npx cap sync android
+          ./node_modules/.bin/cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
+          ./node_modules/.bin/cap add android || true
+          ./node_modules/.bin/cap sync android
 
-      - name: Force Kotlin stdlib version (fix duplicate classes)
-        working-directory: ${{ steps.findroot.outputs.root }}/android
-        run: |
-          set -e
-          if [ ! -f build.gradle ]; then
-            echo "android/build.gradle not found"
-            ls -la
-            exit 1
-          fi
-
-          if ! grep -q "ONE_STEP_KOTLIN_FORCE" build.gradle; then
-            printf '\n// ONE_STEP_KOTLIN_FORCE\nsubprojects {\n  configurations.all {\n    resolutionStrategy {\n      force "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"\n      force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22"\n      force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22"\n    }\n  }\n}\n' >> build.gradle
-          fi
-
-      - name: Set app display name
-        working-directory: ${{ steps.findroot.outputs.root }}/android
-        run: |
-          set -e
-          STRINGS_FILE="app/src/main/res/values/strings.xml"
+          # Set the launcher name under the icon (Android)
+          STRINGS_FILE="android/app/src/main/res/values/strings.xml"
           if [ -f "$STRINGS_FILE" ]; then
             sed -i 's/<string name="app_name">.*<\/string>/<string name="app_name">SOS EngiTrack<\/string>/' "$STRINGS_FILE"
           fi
 
-      - name: Assemble Debug APK
-        working-directory: ${{ steps.findroot.outputs.root }}/android
-        run: |
+          cd android
           chmod +x gradlew
           ./gradlew assembleDebug
 
