--- a/.github/workflows/build-apk-from-zip.yml
+++ b/.github/workflows/build-apk-from-zip.yml
@@ -24,20 +24,20 @@ jobs:
         id: findroot
         run: |
           set -e
-          ROOT="$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})"
+          ROOT=$(find project -maxdepth 6 -name package.json -print -quit | xargs -I{} dirname {})
+          echo "Detected root: $ROOT"
           if [ -z "$ROOT" ]; then
-            echo "package.json not found"
+            echo "ERROR: package.json not found"
             exit 1
           fi
           echo "root=$ROOT" >> $GITHUB_OUTPUT
-          echo "Detected root: $ROOT"
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      - name: Setup Java
+      - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -47,46 +47,37 @@ jobs:
         working-directory: ${{ steps.findroot.outputs.root }}
         run: npm install
 
-      - name: Install Capacitor deps
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          npm i -D @capacitor/cli @capacitor/core @capacitor/android
-          npm i @capacitor/filesystem @capacitor/share @capacitor/clipboard
-
-      - name: Verify CSV + Engineer Name are present (fail if missing)
-        working-directory: ${{ steps.findroot.outputs.root }}
-        run: |
-          set -e
-          echo "Checking Home.tsx..."
-          grep -n "Filesystem\.writeFile" client/src/pages/Home.tsx
-          grep -n "@capacitor/filesystem" client/src/pages/Home.tsx
-          grep -n "@capacitor/share" client/src/pages/Home.tsx
-          grep -n "Engineer Name" client/src/pages/Home.tsx
-          grep -n "engineerSlug" client/src/pages/Home.tsx
-          echo "OK."
-
       - name: Build web app
         working-directory: ${{ steps.findroot.outputs.root }}
         run: npm run build
 
-      - name: Build Android APK
+      - name: Add Android + Sync (Capacitor)
         working-directory: ${{ steps.findroot.outputs.root }}
         run: |
-          ./node_modules/.bin/cap init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
-          ./node_modules/.bin/cap add android || true
-          ./node_modules/.bin/cap sync android
+          set -e
+          if [ -x ./node_modules/.bin/cap ]; then
+            CAP=./node_modules/.bin/cap
+          else
+            CAP="npx cap"
+          fi
 
-          # Set the launcher name under the icon (Android)
+          $CAP init "SOS EngiTrack" com.engitrack.timesheet --web-dir dist/public || true
+          $CAP add android || true
+          $CAP sync android
+
+          # Set launcher/display name under icon
           STRINGS_FILE="android/app/src/main/res/values/strings.xml"
           if [ -f "$STRINGS_FILE" ]; then
             sed -i 's/<string name="app_name">.*<\/string>/<string name="app_name">SOS EngiTrack<\/string>/' "$STRINGS_FILE"
           fi
 
-          cd android
+      - name: Build Debug APK
+        working-directory: ${{ steps.findroot.outputs.root }}/android
+        run: |
           chmod +x gradlew
           ./gradlew assembleDebug
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
